/dns/delete/ and /dns/add are our endpoints

--- a/openapi/bindrest01.yaml
+++ b/openapi/bindrest01.yaml
@@ -97,7 +97,7 @@ paths:
                 - $ref: '#/components/schemas/NSRecordShort'
                 - $ref: '#/components/schemas/SPFMRecordShort'
 
-  /dns/{domain}/{rtype}/{host}:
+  /dns/add/{domain}/{rtype}/{host}:
     parameters:
       - in: path
         name: rtype
